--- a/css/style.css
+++ b/css/style.css
@@ -543,12 +543,13 @@ max-width: 25%;
   }
 
   .step {
-    max-width:15vw;
+    max-width:20vw;
+    padding:10px;
 
   }
 
   .step p {
-    font-size:10px;
+    font-size:9px;
 
   }
 
