--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,9 @@ ul, li {
 	list-style-type: none;
 }
 
-
+img {
+  max-width:100%;
+}
 
 /* NAV STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
